--- a/src/app/features/shopping-cart/shopping-cart-list.style.css
+++ b/src/app/features/shopping-cart/shopping-cart-list.style.css
@@ -1,11 +1,11 @@
-.shopping-card-container {
+.shopping-cart-container {
     width: 100%;
     display: flex;
     gap: 20px;
     padding: 20px;
 }
 
-.shopping-card-detail {
+.shopping-cart-detail {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
@@ -59,6 +59,39 @@
     transform: scale(1.1);
 }
 
+.shopping-cart-header {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.shopping-cart-header h1 {
+    text-align: center;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.shopping-cart-header h1::after {
+    content: '🛒';
+    color: red;
+    font-size: 27px;
+    margin-left: 5px;
+}
+
+.shopping-cart-header i {
+    border: none;
+    background-color: #f4a534;
+    color: #FFF;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+
+    display: grid;
+    place-content: center;
+}
+
 @media (max-width: 820px) {
     .shopping-cart-options {
         width: calc(100% - 15px - 280px);
@@ -66,11 +99,11 @@
 }
 
 @media (max-width: 700px) {
-    .shopping-card-container {
+    .shopping-cart-container {
       flex-direction: column;
     }
 
-    .shopping-card-summary {
+    .shopping-cart-summary {
         display: flex;
         justify-content: center;
     }
