--- a/src/app/core/components/navbar/components/searchbox/searchbox.style.css
+++ b/src/app/core/components/navbar/components/searchbox/searchbox.style.css
@@ -1,7 +1,7 @@
 .boxContainer {
     background: #FFFF;
-    width: 450px;
-    height: 45px;
+    width: 100%;
+    height: 40px;
     padding: 0 10px;
     border-radius: 35px;
 }
@@ -39,10 +39,6 @@
 }
 
 @media (max-width: 570px) {
-
-    .boxContainer {
-        width: 55vw;
-    }
 
     .search {
         font-size: 16px;
