--- a/src/app/core/components/navbar/navbar.style.css
+++ b/src/app/core/components/navbar/navbar.style.css
@@ -1,5 +1,5 @@
 .container-navbar {
-    height: 110px;
+    padding: 20px 20px 10px 20px;
     background: #5ccda7;
     margin-bottom: 15px;
     box-shadow: 0px 1px 56px -19px rgba(0,0,0,0.76);
@@ -13,13 +13,39 @@
 .elements-navbar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
-    max-width: 1080px;
-    padding: 15px;
 }
 
-#menu {
-    color: #FFFF;
-    font-size: 45px;
-    cursor: pointer;
+.elements-navbar .searchbox {
+    flex: 1 1 auto;
+}
+
+.elements-navbar .shoppingcart {
+    margin-left: 15px;
+}
+
+@media (max-width: 570px) {
+
+    .container-navbar {
+        padding: 20px 10px 10px 10px;
+        margin-bottom: 10px;
+    }
+    
+}
+
+@media (max-width: 800px) {
+
+    .container-navbar {
+        padding: 10px 20px;
+    }
+
+    .elements-navbar .searchbox {
+        width: 100%;
+    }
+
+    .container-navbar .shoppingcart {
+        display: none;
+    }
+    
 }
