--- a/src/app/core/pages/home/home-browse.style.css
+++ b/src/app/core/pages/home/home-browse.style.css
@@ -8,6 +8,6 @@
     display: flex;
     gap: 25px;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     min-height: calc(100vh - 125px - 104px);
 }
