--- a/src/app/features/shopping-cart/components/shopping-cart-detail/shopping-cart-detail.style.css
+++ b/src/app/features/shopping-cart/components/shopping-cart-detail/shopping-cart-detail.style.css
@@ -51,24 +51,32 @@
 }
 
 .shopping-cart-quantity h1[target="quantity"] {
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #EFE4E4;
+    font-size: 20px;
     width: 80px;
+    height: 35px;
     margin: 0 20px 0 20px;
 }
 
 .shopping-cart-quantity h1[target="decrement"],
 .shopping-cart-quantity h1[target="increment"] {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 24px;
+    font-weight: 500;
+
     background-color: #f4a534;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     color: #F7F5F5;
     cursor: pointer;
+    user-select: none;
 }
 
 .shopping-cart-detail-container .icon-container {
@@ -101,6 +109,7 @@
     }
 
     .shopping-cart-quantity {
+        margin-top: 8px;
         grid-area: 2 / 1 / 3 / 3;
     }
 
