--- a/src/app/features/shopping-cart/shopping-cart-list.style.css
+++ b/src/app/features/shopping-cart/shopping-cart-list.style.css
@@ -12,15 +12,24 @@
     gap: 15px;
 }
 
+.shopping-cart-detail a {
+    text-align: right;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.shopping-cart-detail a:hover {
+    text-decoration: underline;
+}
+
 .shopping-cart-empty {
     text-align: center;
 }
 
 .shopping-cart-options {
-    display: flex;
-    justify-content: space-between;
-    width: calc(100% - 15px - 320px);
+    display: grid;
     padding: 20px;
+    place-content: center;
 }
 
 .shopping-cart-options a {
@@ -45,16 +54,13 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
-.shopping-cart-options a[target='clean'] {
-    background: #F4A534;
-}
-.shopping-cart-options a[target='share'] {
+.shopping-cart-options a {
     background: #EA794C;
 }
 
-.shopping-cart-options a[target='share']:hover,
-.shopping-cart-options a[target='share']:focus,
-.shopping-cart-options a[target='share']:active {
+.shopping-cart-options a:hover,
+.shopping-cart-options a:focus,
+.shopping-cart-options a:active {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
 }
@@ -65,14 +71,16 @@
     margin-left: 20px;
 }
 
-.shopping-cart-header h1 {
+.shopping-cart-header span {
     text-align: center;
     margin-left: 20px;
+    font-size: 22px;
+    font-weight: 500;
     display: flex;
     align-items: center;
 }
 
-.shopping-cart-header h1::after {
+.shopping-cart-header span::after {
     content: '🛒';
     color: red;
     font-size: 27px;
@@ -83,29 +91,20 @@
     border: none;
     background-color: #f4a534;
     color: #FFF;
+    font-size: 22px;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     cursor: pointer;
+    user-select: none;
 
     display: grid;
     place-content: center;
 }
 
-@media (max-width: 820px) {
-    .shopping-cart-options {
-        width: calc(100% - 15px - 280px);
-    }
-}
-
 @media (max-width: 700px) {
     .shopping-cart-container {
       flex-direction: column;
-    }
-
-    .shopping-cart-summary {
-        display: flex;
-        justify-content: center;
     }
 
     .shopping-cart-options {
