Estilizacion y logica del componente share del shopping cart

--- a/src/app/features/shopping-cart/pages/share/component/share-detail/share-detail.styles.css
+++ b/src/app/features/shopping-cart/pages/share/component/share-detail/share-detail.styles.css
@@ -1,6 +1,7 @@
 .list-product .product {
     list-style: none;
     display: flex;
+    align-items: center;
 }
 
 .list-product .product .checkbox {
