--- a/src/app/features/shopping-cart/pages/share/share.styles.css
+++ b/src/app/features/shopping-cart/pages/share/share.styles.css
@@ -1,20 +1,30 @@
+.share-component-container {
+    padding: 0 10px;
+}
+
 .shared-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    padding: 0 10px;
+    width: 100%;
+    margin-top: 15px;
+    padding: 15px;
+    background-color: #FFF;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .shared-container .shared-elements {
     display: flex;
     flex-direction: column;
-    width: auto;
     gap: 10px;
 }
 
 .share-header {
     display: flex;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 10px;
     margin-bottom: 20px;
 }
 
@@ -47,4 +57,16 @@
 
     display: grid;
     place-content: center;
+}
+
+@media (min-width: 800px) {
+    .share-component-container .separator {
+        display: flex;
+        flex-flow: row-reverse;
+        gap: 20px;
+    }
+
+    .shared-container {
+        margin-top: 0;
+    }
 }
