--- a/src/app/core/components/footer/footer.styles.css
+++ b/src/app/core/components/footer/footer.styles.css
@@ -9,24 +9,18 @@
 5.otros 
 */
 
-* {
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    
-}
+
 
 .footer-container{
     width: 100%;
-    background-color:  #58c5ad;
-    /* height: 200px; */
     margin-top: 20px;
     padding: 0 5px 0 5px;
+    background-color:  #58c5ad;
+
     
 }
 .footer-container .group-one {
     width: 100%;
-   
     max-width: 1200px;
     margin: auto;
     display: grid;
@@ -35,16 +29,17 @@
     padding: 35px 0px;
 }
 .footer-container .group-one .box .figure {
-    width: 250x;
-    /* height: 110%; */
+    width: 200px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .footer-container .group-one figure img {
-    width: 220px;
-    height:110px;
-    /* border-radius: 8px; */
+   padding: 0 0 0 5px;
+   margin-top: 10px;
+    width: 100%;
+    height:130%;
 }
 
 
@@ -55,17 +50,18 @@
     align-items: center;
 }
 .footer-container .group-one .box h2 {
-    color: #0d3320;
     margin-bottom: 25px;
     font-size: 20px;
     font-weight: 900;
     font-family: "Poppins",sans-serif;
+    color: #0d3320;
 
 }
 .footer-container .group-one .box p {
-    color: #0d3320;
     margin-bottom: 10px;
     font-weight: 300;
+    color: #0d3320;
+
 }
 /* red social  */
 
@@ -78,23 +74,23 @@
 }
 
 .footer-container .group-one .red-social .red-social-title {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-family: "Poppins",sans-serif;
 }
 
 .footer-container .group-one .red-social a {
-   
-    text-decoration: none;
     width: 55px;
     height: 50px;
-    line-height: 45px;
-    border-radius: 12px;
-    color: #fff;
-    background-color: #0d3320;
-    text-align: center;
-    transition: all 300ms ease;
     margin-top: 40px;
     margin-left: 6px;
+    line-height: 45px;
+    text-align: center;
+    background-color: #0d3320;
+    color: #fff;
+    border-radius: 12px;
+    text-decoration: none;
+    transition: all 300ms ease;
+
 }
 .footer-container .group-one .red-social a:hover {
     color:#58c5ad;
@@ -104,9 +100,9 @@
     justify-content: center;
     align-items: center;
     background-color: #0d3320;
+    color: #fff;
     padding: 15px 10px;
     text-align: center;
-    color: #fff;
 }
 .footer-container .group-two  small{
     font-size: 15px;
