--- a/src/app/core/components/footer/footer.styles.css
+++ b/src/app/core/components/footer/footer.styles.css
@@ -90,7 +90,7 @@
     border-radius: 12px;
     text-decoration: none;
     transition: all 300ms ease;
-
+    text-decoration: none;
 }
 .footer-container .group-one .red-social a:hover {
     color:#58c5ad;
