--- a/src/app.style.css
+++ b/src/app.style.css
@@ -1,7 +1,7 @@
 .app-container #outlet {
     width: 100vw;
     height: calc(100vh - 97px);
-    padding: 0 0 0 10px;
+    /* padding: 0 0 0 10px; */
     overflow: hidden;
     overflow-y: scroll;
 }
