Adicion de estilos

--- a/src/app/core/components/loader/loader.styles.css
+++ b/src/app/core/components/loader/loader.styles.css
@@ -1,4 +1,10 @@
 .container-loader {
+    width: 100vw;
+    display: grid;
+    place-content: center;
+}
+
+.container-loader .loader {
     width: 100px;
     height: 100px;
     border: solid 5px #064555;
