Correccion en estilos de vistas generales

--- a/src/app/core/pages/home/home-browse.style.css
+++ b/src/app/core/pages/home/home-browse.style.css
@@ -1,7 +1,6 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.container-home {
+    padding: 0 10px;
+    min-height: calc(100vh - 70px - 341px);
 }
 
 .container-cards {
@@ -17,17 +16,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 30px;
 }
 
 .container-button button{
-    width: 110px;
+    width: 150px;
     height: 50px;
     border-radius: 5px;
     font-size: 14px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-transform: uppercase;
+    border: 0px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: #f4a534;
+    cursor: pointer;
+}
+
+.container-button button:active {
+    -webkit-animation: buttonAction 0.9s both;
+    animation: buttonAction 0.9s both;
 }
 
 .container-button button .btn-text{
@@ -37,3 +42,68 @@
 footer-component {
     width: 100vw;
 }
+
+
+/* Animaciones del boton */
+
+@-webkit-keyframes buttonAction {
+    0% {
+      -webkit-transform: scale3d(1, 1, 1);
+              transform: scale3d(1, 1, 1);
+    }
+    30% {
+      -webkit-transform: scale3d(1.25, 0.75, 1);
+              transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+      -webkit-transform: scale3d(0.75, 1.25, 1);
+              transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+      -webkit-transform: scale3d(1.15, 0.85, 1);
+              transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+      -webkit-transform: scale3d(0.95, 1.05, 1);
+              transform: scale3d(0.95, 1.05, 1);
+    }
+    75% {
+      -webkit-transform: scale3d(1.05, 0.95, 1);
+              transform: scale3d(1.05, 0.95, 1);
+    }
+    100% {
+      -webkit-transform: scale3d(1, 1, 1);
+              transform: scale3d(1, 1, 1);
+    }
+  }
+  @keyframes buttonAction {
+    0% {
+      -webkit-transform: scale3d(1, 1, 1);
+              transform: scale3d(1, 1, 1);
+    }
+    30% {
+      -webkit-transform: scale3d(1.25, 0.75, 1);
+              transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+      -webkit-transform: scale3d(0.75, 1.25, 1);
+              transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+      -webkit-transform: scale3d(1.15, 0.85, 1);
+              transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+      -webkit-transform: scale3d(0.95, 1.05, 1);
+              transform: scale3d(0.95, 1.05, 1);
+    }
+    75% {
+      -webkit-transform: scale3d(1.05, 0.95, 1);
+              transform: scale3d(1.05, 0.95, 1);
+    }
+    100% {
+      -webkit-transform: scale3d(1, 1, 1);
+              transform: scale3d(1, 1, 1);
+    }
+  }
+  
