--- a/src/app/features/favorites/favorites-browse.styles.css
+++ b/src/app/features/favorites/favorites-browse.styles.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 20px;
+    min-height: calc(100vh - 70px - 341px);
 }
 
 .favorite-container .options {
