--- a/src/app/shared/components/product-card/product-card.style.css
+++ b/src/app/shared/components/product-card/product-card.style.css
@@ -93,6 +93,8 @@
       display: flex;
       align-items: center;
       width: 100%;
+      min-height: 120px;
+      max-height: 120px;
     }
 
     .card-description {
