--- a/src/app/shared/components/product-card/product-card.style.css
+++ b/src/app/shared/components/product-card/product-card.style.css
@@ -43,8 +43,12 @@
     width: 70%;
     max-height: 147px;
     object-fit:contain;
+    transition: transform .2s;
 }
 
+.image:hover{
+  transform:scale(1.3);
+}
 /* Estilos del boton de favoritos */
 .favorite-button {
   position: relative;
