--- a/src/app/core/components/footer/footer.styles.css
+++ b/src/app/core/components/footer/footer.styles.css
@@ -2,8 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Poppins:wght@200;300;400&display=swap');
 
 
+/* MANERA DE ORGANIZAR EL CODIGO EN CSS
+1. posicionamiento 
+2. modelo de caja 
+3.tipografia
+4.visuales
+5.otros 
+*/
+
+
 .footer-container{
     width: 100%;
+    /* height: 320px; */
     margin-top: 20px;
     padding: 0 5px 0 5px;
     background-color:  #58c5ad;
@@ -14,21 +24,28 @@
     margin: auto;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-gap:50px;
-    padding: 35px 0px;
+    grid-gap:30px;
+    padding: 15px 10px;
 }
+
+#box-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   align-items: center;
+}
+
 .footer-container .group-one .box .figure {
     width: 200px;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   
+   
 }
 .footer-container .group-one figure img {
-   padding: 0 0 0 5px;
-   margin-top: 10px;
-    width: 100%;
-    height:130%;
+   
+    width: 95%;
+    height:auto;
+   
 }
 
 .footer-container .group-one figure {
@@ -82,13 +99,15 @@
 .footer-container .group-one .red-social a:hover {
     color:#58c5ad;
 } 
+
+/* derechos */
 .footer-container .group-two {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #0d3320;
     color: #fff;
-    padding: 15px 10px;
+    padding: 7px;
     text-align: center;
 }
 .footer-container .group-two  small{
@@ -102,7 +121,65 @@
     .footer-container .group-one{
         width: 90%;
         grid-template-columns: repeat(1,1fr);
-        grid-gap: 30px;
-        padding: 35px 0px;
+        grid-gap: 13px;
+        padding: 20px 0px;
     } 
+
+    .footer-container .group-one .box{
+        display: flex;
+        flex-direction: column;
+        /* text-align: justify; */
+        justify-content: center;
+    }
+    .footer-container .group-one .box .title-info-cecosesola {
+        margin-bottom: 15px;
+        font-size: 1.2rem;
+        font-weight: 800;
+        font-family: "Poppins",sans-serif;
+        color: #0d3320;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+    }
+    .footer-container .group-one .box .text-info-cecosesola {
+        margin-bottom: 5px;
+        font-weight: 450;
+        color: #0d3320;
+    }
+
+    .footer-container .group-one .red-social .red-social-title {
+        font-size: 1.2rem;
+        font-family: "Poppins",sans-serif;
+        font-weight: 800;
+        display: flex;
+        color: #0d3320;
+        align-items: center;
+        justify-content: center;
+    }
+    
+.footer-container .group-one .red-social a {
+    width: 55px;
+    height: 50px;
+    margin-top: 15px;
+    margin-left: 6px;
+    line-height: 45px;
+    text-align: center;
+    background-color: #0d3320;
+    color: #fff;
+    border-radius: 12px;
+    text-decoration: none;
+    transition: all 300ms ease;
+    text-decoration: none;
+}
+
+.footer-container .group-one .box .link-page-cecosesola{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.1rem;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+
 }
